mind-nodes/style/style.css
:root {
  font-variant-ligatures: none;
  -webkit-font-smoothing: subpixel-antialiased;
}
@media only screen and (min-device-width : 481px) {
    #contents a {
    font-size: 2.312em;
    }
    #title {
    font-size: 2.875em;
    }
    .post img {
      max-width: 18px;
      display:inline-block;
    }
    #home {
      border: .5px solid;
    }
    #home img {
        max-width: 19px;
        padding: 8px;
        padding-top: 7px;
        padding-bottom: 5px;
    }
    .post {
      font-size: 1.375em;
      padding-left: 40px;
    }
}
@media only screen and (min-device-width : 200px) and (max-device-width : 480px) {
    #contents a {
    font-size: 3.58em;
    }
    #title {
    font-size: 4em;
    }
    .post img {
      max-width: 29px;
      display:inline-block;
    }
    #home {
      border: 1.5px solid;
    }
    #home img {
        max-width: 38px;
        padding: 16px;
        padding-top: 14px;
        padding-bottom: 14px;
    }
    .post {
      font-size: 1em;
      padding-left: 40px;
    }
}
/*begin:text*/
@font-face {
  font-family: "Hairline";
  src: url("../../style/fonts/Hairline.ttf") format("truetype");
  font-weight: 150;
}
/*begin:layout*/
#title {
  color: #000000;
  font-family: "Hairline";
  margin-top: 100px;
  margin-bottom: 0px;
  letter-spacing: 8px;
  word-spacing: -4px;
}
body {
  margin: auto;
  background: #cccccc;
}
.framed {
  min-height: 95%;
  text-align: center;
}
#contents {
  width: 830px;
  margin: auto;
  margin-top: 48px;
  background-color: #D5D5D5;
  border-radius: 14px;
  padding-top: 30px;
  padding-bottom: 23px;
}
#contents a {
  color: #000000;
  letter-spacing: 0px;
  word-spacing: 0px;
  font-family: "Hairline";
  letter-spacing: 1px;
  text-decoration: none;
} 
#contents p {
  font-size: .5em;
  letter-spacing: 0px;
  word-spacing: 0px;
  text-decoration: none;
  display:inline-block;
}
.post:hover {
  color: #FFFFFF;
  transition: color 0.15s ease-in-out;
  -moz-transition: color 0.15s ease-in-out;
  -webkit-transition: color 0.15s ease-in-out;
}
.post:hover img {
  content: url("./images/bkmk-w.png");
}
#home {
  position: relative;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 200px;
  margin-bottom: 25px;
  display: inline-block;
  color: #000000;
  overflow: hidden;
  border-radius: 100%;
  padding-top: 0px;
  padding-bottom: 0px;
}
#home:hover {
  color: #FFFFFF;
  border: .5px solid #FFFFFF;
}
#home:hover img {
  content: url("./images/home-w.png");
}
.fade-in {
  animation: fadeIn 10s;
  -webkit-animation: fadeIn 10s;
  -moz-animation: fadeIn 10s;
  -o-animation: fadeIn 10s;
  -ms-animation: fadeIn 10s;
}
.post {
  font-family: "Hairline";
  letter-spacing: 0px;
  word-spacing: 0px;
  line-height: 0;
  text-align: left;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

